Atom Notification Issue
Prevents content from being hidden by default (forcing user to hover over to show content).

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -71,10 +71,6 @@
     content: "\f026";
   }
 
-  .content {
-    display: none;
-  }
-
   &:hover {
     color: @text-color-selected;
     cursor: pointer;
